--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 白いオーバーレイ -->
+    <div id="fade-overlay" class="fade-overlay"></div>
+
     <!-- 最初の画面 -->
     <div id="start-screen" class="screen">
         <img src="textures/back1.png" alt="背景1" class="background" />
@@ -22,7 +25,7 @@
         <div class="button-container">
             <button id="snack-btn">おやつ</button>
             <button id="date-btn">デート</button>
-            <button id="touch-btn">ふれあい</button>
+            <button id="shop-btn">ショップ</button> <!-- ふれあい → ショップに変更 -->
             <button id="event-btn">イベント</button>
         </div>
     </div>
