--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="button-container">
             <button id="snack-btn">おやつ</button>
             <button id="date-btn">デート</button>
-            <button id="shop-btn">ショップ</button> <!-- ふれあい → ショップに変更 -->
+            <button id="shop-btn">ショップ</button>
             <button id="event-btn">イベント</button>
         </div>
     </div>
