--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- 白いオーバーレイ -->
-    <div id="fade-overlay" class="fade-overlay"></div>
+    <div id="fade-overlay" class="fade-overlay hidden"></div>
 
     <!-- 最初の画面 -->
     <div id="start-screen" class="screen">
