--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <img src="textures/back2.png" alt="背景2" class="background" />
         <img src="textures/chara1.png" alt="キャラクター" id="character" class="character" />
         
+        <!-- 吹き出し -->
+        <div id="speech-bubble" class="speech-bubble hidden">
+            <img src="textures/hukidasi1.png" alt="吹き出し" class="bubble-img" />
+            <p id="speech-text" class="speech-text">こんにちは！</p>
+        </div>
+
         <!-- ボタン -->
         <div class="button-container">
             <button id="snack-btn">おやつ</button>
