--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <p id="speech-text" class="speech-text">こんにちは！</p>
         </div>
 
+        <!-- 半透明の横線 -->
+        <div class="horizontal-line"></div>
+
         <!-- ボタン -->
         <div class="button-container">
             <button id="snack-btn">おやつ</button>
