--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             <button id="event-btn">イベント</button>
         </div>
     </div>
+    
+    <!-- おやつUI -->
+<div id="snack-ui" class="snack-ui hidden">
+    <div class="snack-list">
+        <!-- おやつのアイテムはJavaScriptで動的に追加 -->
+    </div>
+    <button id="close-snack-ui">×</button>
+</div>
+
 
     <script src="script.js"></script>
 </body>
