--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="shop.css">
 </head>
 <body>
+    <!-- 所持金表示 -->
+<div id="money-display" class="money-display">
+    <div class="money-box">
+        <img src="textures/coin.png" alt="所持金アイコン" class="money-icon" />
+        <span id="money-amount">0</span>
+    </div>
+</div>
+
     <div id="shop-screen">
         <div class="shop-background">
             <div class="shop-items">
