--- a/shop.html
+++ b/shop.html
@@ -30,6 +30,10 @@
                     <img src="textures/items/donut.png" alt="ドーナツ">
                     <p>ドーナツ</p>
                 </div>
+                <div class="shop-item">
+                    <img src="textures/items/donut.png" alt="ドーナツ">
+                    <p>ドーナツ</p>
+                </div>
             </div>
         </div>
     </div>
