--- a/shop.html
+++ b/shop.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="shop.css">
 </head>
 <body>
+    <!-- ホームボタン -->
+    <a href="index.html" id="home-button" class="home-button">ホーム</a>
+
     <!-- 所持金表示 -->
-<div id="money-display" class="money-display">
-    <div class="money-box">
-        <img src="textures/coin.png" alt="所持金アイコン" class="money-icon" />
-        <span id="money-amount">0</span>
+    <div id="money-display" class="money-display">
+        <div class="money-box">
+            <img src="textures/coin.png" alt="所持金アイコン" class="money-icon" />
+            <span id="money-amount">0</span>
+        </div>
     </div>
-</div>
 
     <div id="shop-screen">
         <div class="shop-background">
@@ -21,18 +24,26 @@
                 <div class="shop-item">
                     <img src="textures/items/strawberry.png" alt="いちご">
                     <p>いちご</p>
+                    <div class="coin-display">
+                        <img src="textures/coin.png" alt="所持金アイコン" />
+                        <span>100</span>
+                    </div>
                 </div>
                 <div class="shop-item">
                     <img src="textures/items/macaron.png" alt="マカロン">
                     <p>マカロン</p>
+                    <div class="coin-display">
+                        <img src="textures/coin.png" alt="所持金アイコン" />
+                        <span>100</span>
+                    </div>
                 </div>
                 <div class="shop-item">
                     <img src="textures/items/donut.png" alt="ドーナツ">
                     <p>ドーナツ</p>
-                </div>
-                <div class="shop-item">
-                    <img src="textures/items/donut.png" alt="ドーナツ">
-                    <p>ドーナツ</p>
+                    <div class="coin-display">
+                        <img src="textures/coin.png" alt="所持金アイコン" />
+                        <span>100</span>
+                    </div>
                 </div>
             </div>
         </div>
