--- a/shop.html
+++ b/shop.html
@@ -18,10 +18,14 @@
         </div>
     </div>
 
+    <!-- おやつリスト（ここを追加） -->
+    <div id="snack-list"></div> <!-- snack-list 要素を追加 -->
+
+    <!-- ショップ画面 -->
     <div id="shop-screen">
         <div class="shop-background">
             <div class="shop-items">
-                <div class="shop-item">
+                <div class="shop-item" data-name="いちご" data-price="100">
                     <img src="textures/items/strawberry.png" alt="いちご">
                     <p>いちご</p>
                     <div class="coin-display">
@@ -29,7 +33,7 @@
                         <span>100</span>
                     </div>
                 </div>
-                <div class="shop-item">
+                <div class="shop-item" data-name="マカロン" data-price="100">
                     <img src="textures/items/macaron.png" alt="マカロン">
                     <p>マカロン</p>
                     <div class="coin-display">
@@ -37,7 +41,7 @@
                         <span>100</span>
                     </div>
                 </div>
-                <div class="shop-item">
+                <div class="shop-item" data-name="ドーナツ" data-price="100">
                     <img src="textures/items/donut.png" alt="ドーナツ">
                     <p>ドーナツ</p>
                     <div class="coin-display">
