--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <!-- ゲーム画面 -->
     <div id="game-screen" class="screen hidden">
         <img src="textures/back2.png" alt="背景2" class="background" />
+        
+        <!-- XPバー -->
+        <div id="xp-bar" class="xp-bar">
+            <div id="xp-fill" class="xp-fill"></div>
+        </div>
+
+        <!-- レベル円 -->
+        <div id="level-circle" class="level-circle">
+            <span id="level-text" class="level-text">1</span>
+        </div>
+
         <img src="textures/chara1.png" alt="キャラクター" id="character" class="character" />
         
         <!-- 吹き出し -->
