--- a/index.html
+++ b/index.html
@@ -60,5 +60,15 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(function (registration) {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch(function (error) {
+        console.log('ServiceWorker registration failed:', error);
+      });
+  }
+</script>
 </body>
 </html>
