--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="theme-color" content="#317EFB">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="りすさん育成ゲーム">
+    <link rel="apple-touch-icon" href="/icons/icon-192.png">
     <title>りすさん育成ゲーム</title>
     <link rel="stylesheet" href="style.css">
 </head>
