--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="りすさん育成ゲーム">
     <link rel="apple-touch-icon" href="/icons/icon-192.png">
-    <title>りすさん育成ゲーム</title>
+    <title>りすりふぇ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
