--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="りすさん育成ゲーム">
+    <meta name="apple-mobile-web-app-title" content="りすりふぇ">
     <link rel="apple-touch-icon" href="/icons/icon-192.png">
     <title>りすりふぇ</title>
     <link rel="stylesheet" href="style.css">
